infrastructure/kubernetes/tendersbay-xyz/backend/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-canary-svc
  namespace: tendersbay-xyz
spec:
  type: NodePort
  selector:
    app: tendersbay-xyz
    tier: backend-canary
  ports:
    - port: 30083
      targetPort: 8080
      protocol: TCP
